modifying vercel file 2

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,20 @@
             "source":"/(.*)",
             "destination":"/"
         }
+    ],
+    "version":2,
+    "builds":[
+        {
+            "src":"./index.js",
+            "use":"@vercel/node"
+        }
+    ],
+    "routes":[
+        {
+            "src":"/(.*)",
+            "dest":"/"
+        }
     ]
+
 }
 
